LIVE-43 Clicking a menu item now closes the search overlay.

--- a/www/app/locale/en_us.po
+++ b/www/app/locale/en_us.po
@@ -186,8 +186,8 @@ msgstr "Wild West"
 
 #. Tag & category names
 #:
-msgid "happytwenties"
-msgstr "Happy Twenties"
+msgid "roaringtwenties"
+msgstr "Roaring Twenties"
 
 #. Tag & category names
 #:
