--- a/www/app/locale/nb_no.po
+++ b/www/app/locale/nb_no.po
@@ -51,6 +51,11 @@ msgstr "Kanaler"
 msgid "route_tvguide"
 msgstr "TV-Guide"
 
+#.Route Profile
+#:
+msgid "profile_page"
+msgstr "Min profil"
+
 #. Topics Rendering
 #: 
 msgid "topics_rendering"
