LIVE-107 Football data added, classes hasMany function made

--- a/www/app/locale/nb_no.po
+++ b/www/app/locale/nb_no.po
@@ -19,7 +19,7 @@ msgstr "Hjem"
 #. Route Wishlist
 #: 
 msgid "route_wishlist"
-msgstr "Ønskeliste"
+msgstr "Overvåkningsliste"
 
 #. Route Topics
 #: 
