LIVE-189 added localization in expandable menu

--- a/www/app/locale/en_us.po
+++ b/www/app/locale/en_us.po
@@ -379,4 +379,12 @@ msgstr "Info"
 msgid "sport_players"
 msgstr "Players"
 
+#. Menus
+#:
+msgid "menus_categories"
+msgstr "Categories"
 
+#. Menus
+#:
+msgid "menus_menu"
+msgstr "Menu"
