LIVE-189 "Movies" missing from localization

--- a/www/app/locale/en_us.po
+++ b/www/app/locale/en_us.po
@@ -201,6 +201,11 @@ msgstr "Series"
 
 #. Tag & category names
 #:
+msgid "movies"
+msgstr "Movies"
+
+#. Tag & category names
+#:
 msgid "lostintime"
 msgstr "Lost In Time"
 
