LIVE-163 Made new horizontal scroller, and added icons

--- a/www/app/locale/en_us.po
+++ b/www/app/locale/en_us.po
@@ -162,7 +162,7 @@ msgstr "Age rating"
 #. Search: Placeholder
 #: 
 msgid "search_placeholder"
-msgstr "I want to see"
+msgstr "Search for..."
 
 #. Searchoverlay: Suggested people
 #:
