LIVE-397 Translations added.

--- a/www/app/locale/en_us.po
+++ b/www/app/locale/en_us.po
@@ -557,7 +557,7 @@ msgstr "injured returned"
 #. Soccer ticker translation
 #: 
 msgid "score_change"
-msgstr "score"
+msgstr "goal"
 
 #. Soccer ticker translation
 #: 
