LIVE-339 Moved back button further to the right, and fixed an error with the back action.

--- a/www/app/locale/en_us.po
+++ b/www/app/locale/en_us.po
@@ -92,6 +92,11 @@ msgstr "Sign Out"
 msgid "app_login"
 msgstr "Login"
 
+#. Profile: View profile
+#:
+msgid "view_profile"
+msgstr "View profile"
+
 
 #. Language: English
 #:
@@ -598,4 +603,6 @@ msgstr "shot on target"
 #: 
 msgid "offside"
 msgstr "offside"
+
+
 
